force-app/main/default/objects/Country_State__c/Country_State__c.object-meta.xml
<CustomObject>
    <label>国家地区</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>