force-app/main/default/objects/Country_State__c/fields/Belong_To__c.field-meta.xml
<CustomField>
    <fullName>Belong_To__c</fullName>
    <label>Belong_To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>