force-app/main/default/objects/Country_State__c/fields/BelongTo_CNCity__c.field-meta.xml
<CustomField>
    <fullName>BelongTo_CNCity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BelongTo_CNCity</label>
    <referenceTo>Country_State__c</referenceTo>
    <relationshipName>Country_State2</relationshipName>
    <type>Lookup</type>
</CustomField>