force-app/main/default/objects/Country_State__c/fields/ex_id__c.field-meta.xml
<CustomField>
    <fullName>ex_id__c</fullName>
    <externalId>true</externalId>
    <label>ex_id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>