force-app/main/default/objects/Country_State__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>