force-app/main/default/objects/Country_State__c/recordTypes/StateCountry.recordType-meta.xml
<RecordType>
    <fullName>StateCountry</fullName>
    <active>true</active>
    <label>StateCountry</label>
</RecordType>