force-app/main/default/objects/Country_State__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Belong_To__c</columns>
    <columns>Name__c</columns>
    <columns>BelongTo_CNCity__c</columns>
    <columns>BelongTo_CNDistrict__c</columns>
    <columns>BelongTo_CNProvince__c</columns>
    <columns>Description__c</columns>
    <columns>ex_id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name__c</field>
        <operation>equals</operation>
        <value>TH</value>
    </filters>
    <label>All</label>
</ListView>