force-app/main/default/objects/Country_State__c/listViews/China_City.listView-meta.xml
<ListView>
    <fullName>China_City</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>BelongTo_CNProvince__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BelongTo_CNProvince__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>国内_城市</label>
</ListView>