force-app/main/default/objects/Country_State__c/listViews/China_Province_State.listView-meta.xml
<ListView>
    <fullName>China_Province_State</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Belong_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Belong_To__c</field>
        <operation>equals</operation>
        <value>CN</value>
    </filters>
    <label>国内_省</label>
</ListView>